<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />

        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favourites" />

        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="Order History" />

        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faqs" />

        <item
            android:id="@+id/logOut"
            android:icon="@drawable/ic_log_out_svgrepo_com"
            android:title="Log Out" />

    </group>
</menu>